--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "d3": "~3.4.1",
     "jquery": "1.9.1",
     "backbone": "~1.1.2",
-    "bootstrap": "~3.1.1"
+    "bootstrap": "~3.1.1",
+    "d3.queue": "./lib/d3.queue/queue.js"
   }
 }
