--- a/package.json
+++ b/package.json
@@ -2,23 +2,25 @@
   "name": "example-project",
   "version": "0.1.0",
   "devDependencies": {
+    "connect-php": "0.0.1",
     "grunt": "~0.4.2",
-    "grunt-contrib-uglify": "~0.2.2",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-sass": "~0.5.0",
-    "grunt-contrib-imagemin": "~0.4.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-connect": "~0.5.0",
-    "grunt-contrib-cssmin": "~0.7.0",
-    "grunt-contrib-jshint": "~0.7.2",
-    "grunt-contrib-compass": "~0.7.0",
-    "grunt-contrib-coffee": "~0.8.0",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-clean": "~0.5.0",
     "grunt-bower-concat": "~0.2.4",
     "grunt-config": "~0.1.4",
-    "grunt-notify": "~0.2.17",
+    "grunt-connect-proxy": "^0.1.10",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-coffee": "~0.8.0",
+    "grunt-contrib-compass": "~0.7.0",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-connect": "~0.5.0",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-cssmin": "~0.7.0",
+    "grunt-contrib-imagemin": "~0.4.0",
+    "grunt-contrib-jshint": "~0.7.2",
+    "grunt-contrib-sass": "~0.5.0",
+    "grunt-contrib-uglify": "~0.2.2",
+    "grunt-contrib-watch": "~0.5.3",
     "grunt-include-replace": "~2.0.0",
+    "grunt-notify": "~0.2.17",
     "grunt-sftp-deploy": "~0.1.0"
   },
   "dependencies": {
